1015 add more details

--- a/references.bib
+++ b/references.bib
@@ -30,13 +30,13 @@
 doi = {10.1088/1742-5468/ab3985},
 url = {https://doi.org/10.1088/1742-5468/ab3985},
 year = {2019},
-month = {dec},
+month = {12},
 publisher = {IOP Publishing and SISSA},
 volume = {2019},
 number = {12},
 pages = {124020},
 author = {Saxe, Andrew M and Bansal, Yamini and Dapello, Joel and Advani, Madhu and Kolchinsky, Artemy and Tracey, Brendan D and Cox, David D},
-title = {On the information bottleneck theory of deep learning*},
+title = {On the information bottleneck theory of deep learning},
 journal = {Journal of Statistical Mechanics: Theory and Experiment},
 }
 
