--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[notes]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage[backend=biber, style=authoryear, sorting=none]{biblatex}
